gateways/gateway01/yamls/booking-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booking-service
  namespace: dp01-dev
spec:
  rules:
    - host: booking-service-dp01-dev.apps.sno-ajo-1.snoajo1.com
# replace <cluster sub-domain> with output from: oc get ingresscontrollers/default -n openshift-ingress-operator -o jsonpath='{.status.domain}'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dp01-booking-service
                port:
                  number: 12001
